# yeshql

./: .gitignore  CHANGES.md  README.md  cabal.project  stack.yaml  yeshql.cabal
core/: README.md  yeshql-core.cabal
core/src/Database/: YeshQL.hs
core/src/Database/YeshQL/: Backend.hs  Core.hs  Parser.hs  Util.hs
core/tests/: tests.hs
core/tests/Database/YeshQL/: ParserTests.hs
hdbc/: yeshql-hdbc.cabal
hdbc/src/Database/YeshQL/: HDBC.hs
hdbc/src/Database/YeshQL/HDBC/SqlRow/: Class.hs  TH.hs
hdbc/tests/: tests.hs
hdbc/tests/Database/HDBC/: Mock.hs
hdbc/tests/Database/YeshQL/HDBC/: SimulationTests.hs
hdbc/tests/fixtures/: getUser.sql  getUserNamed.sql
postgresql-simple/: LICENSE  yeshql-postgresql-simple.cabal
postgresql-simple/src/Database/YeshQL/: PostgreSQL.hs
postgresql-simple/tests/: tests.hs
postgresql-simple/tests/Database/YeshQL/PostgreSQL/: Tests.hs
scrap/: Main.hs
src/Database/: YeshQL.hs
src/Database/YeshQL/: Parser.hs  SqlEntity.hs
src/Database/YeshQL/SqlRow/: Class.hs  TH.hs
tests/: tests.hs
tests/Database/HDBC/: Mock.hs
tests/Database/YeshQL/: SimulationTests.hs
tests/fixtures/: getUser.sql  getUserNamed.sql  multiQueries.sql
yeshql/: README.md  yeshql.cabal
yeshql/src/Database/: YeshQL.hs
