name: yeshql
version: 1.0.0.1
synopsis: YesQL-style SQL database abstraction
description: Use quasi-quotations to write SQL in SQL, while at the same time
             adding type annotations to turn them into well-typed Haskell
             functions.
license: MIT
license-file: LICENSE
author: Tobias Dammers
maintainer: tdammers@gmail.com
copyright: 2015-2016 Tobias Dammers
category: Database
build-type: Simple
-- extra-source-files:
cabal-version: >=1.10

library
    exposed-modules: Database.YeshQL
    other-modules: Database.YeshQL.Parser
    -- other-extensions:
    build-depends: base >=4.6 && <5.0
                 , HDBC >= 2.4 && <3.0
                 , containers >= 0.5 && < 1.0
                 , filepath
                 , parsec >= 3.0 && <4.0
                 , template-haskell
    hs-source-dirs: src
    default-language: Haskell2010
test-suite tests
    type: exitcode-stdio-1.0
    build-depends: base >=4.6 && <5.0
                 , yeshql
                 , stm
                 , tasty
                 , tasty-hunit
                 , tasty-quickcheck
                 , HDBC
    hs-source-dirs: tests
    main-is: tests.hs
    other-modules: Database.YeshQL.SimulationTests
                 , Database.HDBC.Mock
    default-language: Haskell2010
