name: yeshql-hdbc
version: 4.1.0.2
synopsis: YesQL-style SQL database abstraction (HDBC backend)
description: Use quasi-quotations or TemplateHaskell to write SQL in SQL, while
             adding type annotations to turn SQL into well-typed Haskell
             functions.
homepage: https://github.com/tdammers/yeshql
bug-reports: https://github.com/tdammers/yeshql/issues
license: MIT
license-file: LICENSE
author: Tobias Dammers
maintainer: tdammers@gmail.com
copyright: 2015-2017 Tobias Dammers and contributors
category: Database
build-type: Simple
extra-source-files: tests/fixtures/*.sql
cabal-version: >=1.10

source-repository head
  type: git
  location: https://github.com/tdammers/yeshql.git

library
    exposed-modules: Database.YeshQL.HDBC
                   , Database.YeshQL.HDBC.SqlRow.Class
                   , Database.YeshQL.HDBC.SqlRow.TH
    -- other-extensions:
    build-depends: base >=4.6 && <5.0
                 , yeshql-core >= 4.0 && <5.0
                 , HDBC >= 2.4 && <3.0
                 , containers >= 0.5 && < 1.0
                 , filepath
                 , parsec >= 3.0 && <4.0
                 , template-haskell
                 , convertible >= 1.1.1.0 && <2
    hs-source-dirs: src
    default-language: Haskell2010
test-suite tests
    type: exitcode-stdio-1.0
    build-depends: base >=4.6 && <5.0
                 , yeshql-hdbc
                 , containers
                 , stm
                 , tasty
                 , tasty-hunit
                 , tasty-quickcheck
                 , HDBC
    hs-source-dirs: tests
    main-is: tests.hs
    other-modules: Database.YeshQL.HDBC.SimulationTests
                 , Database.HDBC.Mock
    default-language: Haskell2010
